// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-stylesheet-folder should create a stylesheet folder 1`] = `
{
  "content": [],
  "structuredContent": {
    "message": "Stylesheet folder created successfully",
    "path": "/_TestCreateStylesheetFolder",
  },
}
`;

exports[`create-stylesheet-folder should create folder with parent folder 1`] = `
{
  "content": [],
  "structuredContent": {
    "message": "Stylesheet folder created successfully",
    "path": "/_TestParentFolder/_TestCreateStylesheetFolder",
  },
}
`;

exports[`create-stylesheet-folder should handle existing folder name 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The folder already exists",
    "operationStatus": "AlreadyExists",
    "status": 400,
    "title": "Folder already exists",
    "type": "Error",
  },
}
`;
